@@ -1,5 +1,11 @@
 2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	- Fixed/Hacked to have missing dependancies from libgnomecanvas
+	  appearing at the dynamic load of the python binding.
+	* src/gcompris/gcompris.c: (main):
+
+2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	- Fixed to compile out of tree.
 
 	* src/boards/Makefile.am:
